feat: changed bullet resources to /bullets
